add graph edit distance

--- a/TEST CODE/notears-test.ipynb
+++ b/TEST CODE/notears-test.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "d2da19aa-3f23-4916-a3fb-9e01a078f9a7",
    "metadata": {},
    "outputs": [],
@@ -57,13 +57,15 @@
     "    print(\"True DAG:\\n\", G)\n",
     "    print(\"Estimated DAG with \" + str(n) + \" samples:\\n\", G_adj_est)\n",
     "\n",
+    "    print(\"Graph Edit Distance (GED) of: \" + str(nx.graph_edit_distance(nx.DiGraph(G), nx.DiGraph(G_adj_est))))\n",
+    "\n",
     "    plot_graph(G, \"True DAG\")\n",
     "    plot_graph(G_adj_est, \"Estimated DAG with \" + str(n) + \" samples\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "c18b118e-6805-4f4c-a6a7-1df2bc5bbbfb",
    "metadata": {},
    "outputs": [
@@ -78,7 +80,8 @@
       "Estimated DAG with 15 samples:\n",
       " [[0 1 1]\n",
       " [0 0 1]\n",
-      " [0 0 0]]\n"
+      " [0 0 0]]\n",
+      "Graph Edit Distance (GED) of: 0.0\n"
      ]
     },
     {
@@ -112,7 +115,8 @@
       "Estimated DAG with 2000 samples:\n",
       " [[0 1 1]\n",
       " [0 0 1]\n",
-      " [0 0 0]]\n"
+      " [0 0 0]]\n",
+      "Graph Edit Distance (GED) of: 0.0\n"
      ]
     },
     {
@@ -141,7 +145,6 @@
     "test_graph = np.array([[0, 1, 1],\n",
     "                   [0, 0, 1],\n",
     "                   [0, 0, 0]])\n",
-    "\n",
     "test_notears(test_graph, 15)\n",
     "test_notears(test_graph, 2000)"
    ]
